--- a/南沙图书馆/src/news-talk.html
+++ b/南沙图书馆/src/news-talk.html
@@ -47,9 +47,10 @@
 						<div class="nav">
 							<ul>
 								<li><a href="news.html">新闻信息</a></li>
-								<li><a href="news-notice.html">通知公告</a></li>
+								<li><a href="#">通知公告</a></li>
 								<li class="active"><a href="news-talk.html">南图讲坛</a></li>
 								<li><a href="news-net.html">网上展览</a></li>
+								<li><a href="#">媒体报道</a></li>
 							</ul>
 						</div>
 					</div>
@@ -66,7 +67,7 @@
 						</div>
 						<div class="content-container">
 							<div class="site-tabs">
-								<ul>
+								<ul class="clearfix">
 									<li class="active"><a href="javascript:;">讲座预告</a></li>
 									<li><a href="javascript:;">往期讲座</a></li>
 								</ul>
