--- a/南沙图书馆/src/reader-activity-show.html
+++ b/南沙图书馆/src/reader-activity-show.html
@@ -55,10 +55,10 @@
 										<dd><a href="#">功能布局</a></dd>
 									</dl>
 								</li>
-								<li class="active">
+								<li>
 									<a href="javascript:;">图书推荐</a>
 									<dl>
-										<dd class="active"><a href="reader-book-new.html">新书介绍</a></dd>
+										<dd><a href="reader-book-new.html">新书介绍</a></dd>
 										<dd><a href="#">本地文献推荐</a></dd>
 										<dd><a href="#">主题阅读</a></dd>
 									</dl>
@@ -66,10 +66,10 @@
 								<li>
 									<a href="reader-consult.html">读者咨询</a>
 								</li>
-								<li>
+								<li class="active">
 									<a href="javascript:;">活动专题</a>
 									<dl>
-										<dd><a href="reader-activity.html">活动公告</a></dd>
+										<dd class="active"><a href="reader-activity.html">活动公告</a></dd>
 										<dd><a href="reader-activity-cut.html">剪影展示</a></dd>
 										<dd><a href="#">活动安排</a></dd>
 										<dd><a href="reader-activity-video.html">活动视频</a></dd>
@@ -98,42 +98,53 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>我是读者</span> <span class="gap">/</span> 图书推荐
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>读者须知</span> <span class="gap">/</span> 活动专题
 							</div>
 							<div class="text">
-								新书介绍
+								活动公告
 								<div class="line"></div>
 							</div>
 						</div>
 						<div class="content-container">
-							<!-- 新书推荐详情 -->
 							<div class="news-detail">
 								<div class="detail-title text-center mb20">
-									<strong class="font-20 mb10">拥有一个你说了算的人生</strong>
+									<strong class="font-20 mb10">交•享•阅”第46期：英语沙龙-“你有权保持沉默，但你所说的一切都可能成为呈堂证供”</strong>
 									<div class="sub mt5">
 										发表于：2019-01-12　　　作者：南方都市报
 									</div>
 								</div>
-								<div class="book-show">
-									<div class="img">
-										<img src="./assets/images/p8.png" alt="">
-									</div>
-									<div class="book-detail font-16">
-										<div class="info">
-											<strong>著者：</strong>	xxxxxx<br />
-											<strong>出版社：</strong> xxxxxx<br />
-											<strong>出版时间：</strong> 2019-01-01 <br />
-											<strong>索书号：</strong> 44255-234
-										</div>
-										<div class=" font-16 mt20 mb10">
-											<strong>图书简介</strong>
-										</div>
-										<div class="editor">
-											<p>一个人的生命，终究是为了活出自己。 如果你有幸在很小的时候就被告知这一点，并身体力行，那么你或许会有一个非常不同的人生起点。 自1992年考入北京大学心理学系，武志红对这个问题的思考不断深入，到现在已有25年。</p>
-											<p>在这期间，他通过十几本书、几百万字文字、上千篇文章，不断向自己和广大读者传达一个观点：成为你自己。</p>
-											<p>他不仅一直在身体力行这一哲学，还借助心理咨询和大量真实案例对当代社会人的心理状态有了细致入微的解读。</p>
-											<p>2019年，武志红老师推出迄今为止zui重要代表作《拥有一个你说了算的人生》，将自己多年的思考集中到这套书中，分活出自我篇和终身成长篇两册。其中， 活出自我篇依次讲述命运、自我、关系、动力、思维、身体、情感； 终身成长篇依次讲述觉知、空间、创造、现实、自由、无常。 本书为活出自我篇。</p>
-										</div>
+								<div class="detail-content pdb20">
+									<div class="editor">
+										<p>
+											活动主题：“交•享•阅”第46期：英语沙龙-“你有权保持沉默，但你所说的一切都可能成为呈堂证供” <br />
+											活动时间：2018年05月27日-2018年05月27日 活动地点：图书馆三楼咖啡厅<br />
+											活动地点：图书馆三楼咖啡厅
+										</p>
+										<p>
+										&nbsp; &nbsp; 相信童鞋们在很多影视作品中都有听到过这句话“你有权保持沉默，但你所说的一切都可能成为呈堂证供”，但是大家知道这句话的出处吗？其实这是美国法律最引以为豪的维护犯罪嫌人权利的米兰达规则。 
+										</p>
+										<p>
+										&nbsp; &nbsp; 讲座主题：“你有权保持沉默，但你所说的一切都可能成为呈堂证供”
+										</p>
+										<p><strong>讲座主题：“你有权保持沉默，但你所说的一切都可能成为呈堂证供”</strong></p>
+										<p><strong>讲座内容：</strong></p>
+										<p>
+											1.Amber Alert的来历与随之而来完善的法律法规 <br />
+											内容：使用EAS（美国紧急警报系统）帮助寻找失踪儿童  <br />
+											来历：1996年被绑架及杀害的9岁女孩Amber  <br />
+											法规的建立：2003年美国国会通过“公诉补救办法和结束当今儿童受剥削法”，经布什总统签署，在2003年4月正式成为法律。这条法律授权在全美范围内设立并实施“安珀紧急通告”系统，为全美各州之间相互配合寻找失踪和被绑架儿童提供了方便。 
+										</p>
+										<p>
+											2.Miranda Warning的来历与随之而来完善的法律法规  <br />
+											内容："You have the right to remain silent. Anything you say can and will be used against you in a court of law. You have the right to have an attorney. If you cannot afford one, one will be appointed to you by the court. With these rights in mind, are you still willing to talk with me about the charges against you?"  <br />
+											来历：1966年米兰达诉亚利桑那州案 法规的建立：1966年首席大法官沃伦（Chief Justice Earl Warren）在联邦最高法院作出裁决（5 v. 4，Harlan,Stewart,White，CLARK大法官附上了异议），确认米兰达在接受讯问以前有权知道自己的宪法第五修正案权利，警察有义务将它告知嫌疑人，告知权利之后，才能讯问，并将该案发回重审。 
+										</p>
+										<p>
+											3.有关法律法规常用英文单词 
+										</p>
+										<p><strong>主讲人介绍：文晓玲（Demi Wen）老师</strong></p>
+										<p>&nbsp; &nbsp; 英国考文垂大学金融一级荣誉学士及二级荣誉硕士，近3年出国英语培训经验，主攻托福阅读，雅思写作以及SAT语法，其中托福阅读提分率为99.8%，平均每两课时提1.5分。教学风格深受留学时期西方教育理念影响，因材施教，严厉的教学要求及活泼的课堂氛围双管齐下，相信Tough time don't last. Tough people do.</p>
+										</p>
 									</div>
 								</div>
 								<div class="news-pager clearfix">
@@ -155,7 +166,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- 新书推荐详情 -->
 						</div>
 					</div>
 				</div>
