--- a/南沙图书馆/src/reader-activity.html
+++ b/南沙图书馆/src/reader-activity.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active">
+								<li>
 									<a href="javascript:;">读者须知</a>
 									<dl>
 										<dd><a href="reader.html">办证须知</a></dd>
@@ -58,28 +58,38 @@
 								<li>
 									<a href="javascript:;">图书推荐</a>
 									<dl>
-										<dd><a href="#">新书介绍</a></dd>
+										<dd><a href="reader-book-new.html">新书介绍</a></dd>
 										<dd><a href="#">本地文献推荐</a></dd>
 										<dd><a href="#">主题阅读</a></dd>
 									</dl>
 								</li>
 								<li>
-									<a href="#">读者咨询</a>
+									<a href="reader-consult.html">读者咨询</a>
 								</li>
-								<li>
+								<li class="active">
 									<a href="javascript:;">活动专题</a>
 									<dl>
-										<dd><a href="#">活动公告</a></dd>
-										<dd><a href="#">剪影展示</a></dd>
+										<dd class="active"><a href="reader-activity.html">活动公告</a></dd>
+										<dd><a href="reader-activity-cut.html">剪影展示</a></dd>
 										<dd><a href="#">活动安排</a></dd>
-										<dd><a href="#">活动视频</a></dd>
+										<dd><a href="reader-activity-video.html">活动视频</a></dd>
 									</dl>
 								</li>
 								<li>
-									<a href="#">图书捐赠</a>
+									<a href="javascript:;">少儿天地</a>
+									<dl>
+										<dd><a href="#">通知公告</a></dd>
+										<dd><a href="#">活动信息</a></dd>
+										<dd><a href="reader-children-acts.html">作品展示</a></dd>
+										<dd><a href="reader-children-book.html">童书推荐</a></dd>
+										<dd><a href="#">少儿教育</a></dd>
+									</dl>
 								</li>
 								<li>
-									<a href="#">问卷调查</a>
+									<a href="reader-donate.html">图书捐赠</a>
+								</li>
+								<li>
+									<a href="reader-question.html">问卷调查</a>
 								</li>
 							</ul>
 						</div>
@@ -103,146 +113,289 @@
 									<li><a href="JavaScript:;">活动回顾</a></li>
 								</ul>
 							</div>
-							<div class="theme-list">
-								<ul class="clearfix">
-									<ul>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-										<li>
-											<a href="reader-activity-show.html" class="img">
-												<img src="./assets/images/p9.png" alt="">
-											</a>
-											<a href="reader-activity-show.html" class="date">
-												<span class="pull-right">2019/12</span>
-												<span class="primary">16</span> 日
-											</a>
-											<a href="reader-activity-show.html" class="t">
-												活动名称活动名称活动名称活动名称活动名称活动名称
-											</a>
-										</li>
-									</ul>
-								</ul>
-							</div>
-							<!-- 活动专题 -->
-							<!-- 分页 -->
-							<ul class="pagination">
-								<li class="disabled">
-									<a href="#">
-										上一页
-									</a>
-								</li>
-								<li class="active"><a href="#">1</a></li>
-								<li><a href="#">2</a></li>
-								<li><a href="#">3</a></li>
-								<li><a href="#">4</a></li>
-								<li><a href="#">5</a></li>
-								<li>
-									<a href="#">
-										下一页
-									</a>
-								</li>
-								<li>
-									<div class="total">
-										<input type="text" value="1" /> /24 页
+							<div class="site-tabs-content mt20">
+								<div class="panel">
+									<div class="theme-list">
+										<ul class="clearfix">
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													1活动名称活动名称活动名称活动名称活动名称活动名称1
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+										</ul>
 									</div>
-								</li>
-								<li><a href="#">跳转</a></li>
-							</ul>
-							<!-- 分页 -->
+									<!-- 活动专题 -->
+									<!-- 分页 -->
+									<ul class="pagination">
+										<li class="disabled">
+											<a href="#">
+												上一页
+											</a>
+										</li>
+										<li class="active"><a href="#">1</a></li>
+										<li><a href="#">2</a></li>
+										<li><a href="#">3</a></li>
+										<li><a href="#">4</a></li>
+										<li><a href="#">5</a></li>
+										<li>
+											<a href="#">
+												下一页
+											</a>
+										</li>
+										<li>
+											<div class="total">
+												<input type="text" value="1" /> /24 页
+											</div>
+										</li>
+										<li><a href="#">跳转</a></li>
+									</ul>
+									<!-- 分页 -->
+								</div>
+								
+							<div class="panel">
+									<div class="theme-list">
+										<ul class="clearfix">
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													2活动名称活动名称活动名称活动名称活动名称活动名称2
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+											<li>
+												<a href="reader-activity-show.html" target="_blank" class="img">
+													<img src="./assets/images/p9.png" alt="">
+												</a>
+												<a href="reader-activity-show.html" class="date">
+													<span class="pull-right">2019/12</span>
+													<span class="primary">16</span> 日
+												</a>
+												<a href="reader-activity-show.html" class="t">
+													活动名称活动名称活动名称活动名称活动名称活动名称
+												</a>
+											</li>
+										</ul>
+									</div>
+									<!-- 活动专题 -->
+									<!-- 分页 -->
+									<ul class="pagination">
+										<li class="disabled">
+											<a href="#">
+												上一页
+											</a>
+										</li>
+										<li class="active"><a href="#">1</a></li>
+										<li><a href="#">2</a></li>
+										<li><a href="#">3</a></li>
+										<li><a href="#">4</a></li>
+										<li><a href="#">5</a></li>
+										<li>
+											<a href="#">
+												下一页
+											</a>
+										</li>
+										<li>
+											<div class="total">
+												<input type="text" value="1" /> /24 页
+											</div>
+										</li>
+										<li><a href="#">跳转</a></li>
+									</ul>
+									<!-- 分页 -->
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
