--- a/南沙图书馆/src/reader-children-acts.html
+++ b/南沙图书馆/src/reader-children-acts.html
@@ -66,7 +66,7 @@
 								<li>
 									<a href="reader-consult.html">读者咨询</a>
 								</li>
-								<li class="active">
+								<li>
 									<a href="javascript:;">活动专题</a>
 									<dl>
 										<dd><a href="reader-activity.html">活动公告</a></dd>
@@ -75,12 +75,12 @@
 										<dd><a href="reader-activity-video.html">活动视频</a></dd>
 									</dl>
 								</li>
-								<li>
+								<li class="active">
 									<a href="javascript:;">少儿天地</a>
 									<dl>
 										<dd><a href="#">通知公告</a></dd>
 										<dd><a href="#">活动信息</a></dd>
-										<dd><a href="reader-children-acts.html">作品展示</a></dd>
+										<dd class="active"><a href="reader-children-acts.html">作品展示</a></dd>
 										<dd><a href="reader-children-book.html">童书推荐</a></dd>
 										<dd><a href="#">少儿教育</a></dd>
 									</dl>
@@ -98,10 +98,10 @@
 						<div class="content-title">
 							<div class="bread-crumb pull-right">
 								<i class="icon icon-adress"></i>
-								<a href="index.html">首页</a> <span class="gap">/</span> <span>读者须知</span> <span class="gap">/</span> 活动专题
+								<a href="index.html">首页</a> <span class="gap">/</span> <span>少儿天地</span> <span class="gap">/</span> 作品展示
 							</div>
 							<div class="text">
-								剪影展示
+								作品展示
 								<div class="line"></div>
 							</div>
 						</div>
