--- a/南沙图书馆/src/reader-children-book.html
+++ b/南沙图书馆/src/reader-children-book.html
@@ -70,18 +70,18 @@
 									<a href="javascript:;">活动专题</a>
 									<dl>
 										<dd><a href="reader-activity.html">活动公告</a></dd>
-										<dd><a href="reader-activity-cut.html">剪影展示</a></dd>
+										<dd class="active"><a href="reader-activity-cut.html">剪影展示</a></dd>
 										<dd><a href="#">活动安排</a></dd>
 										<dd><a href="reader-activity-video.html">活动视频</a></dd>
 									</dl>
 								</li>
-								<li>
+								<li class="active">
 									<a href="javascript:;">少儿天地</a>
 									<dl>
 										<dd><a href="#">通知公告</a></dd>
 										<dd><a href="#">活动信息</a></dd>
 										<dd><a href="reader-children-acts.html">作品展示</a></dd>
-										<dd><a href="reader-children-book.html">童书推荐</a></dd>
+										<dd class="active"><a href="reader-children-book.html">童书推荐</a></dd>
 										<dd><a href="#">少儿教育</a></dd>
 									</dl>
 								</li>
