--- a/南沙图书馆/src/reader.html
+++ b/南沙图书馆/src/reader.html
@@ -49,7 +49,7 @@
 								<li class="active">
 									<a href="javascript:;">读者须知</a>
 									<dl>
-										<dd><a href="reader.html">办证须知</a></dd>
+										<dd class="active"><a href="reader.html">办证须知</a></dd>
 										<dd><a href="#">入室须知</a></dd>
 										<dd><a href="#">服务电话</a></dd>
 										<dd><a href="#">功能布局</a></dd>
@@ -58,28 +58,38 @@
 								<li>
 									<a href="javascript:;">图书推荐</a>
 									<dl>
-										<dd><a href="#">新书介绍</a></dd>
+										<dd><a href="reader-book-new.html">新书介绍</a></dd>
 										<dd><a href="#">本地文献推荐</a></dd>
 										<dd><a href="#">主题阅读</a></dd>
 									</dl>
 								</li>
 								<li>
-									<a href="#">读者咨询</a>
+									<a href="reader-consult.html">读者咨询</a>
 								</li>
 								<li>
 									<a href="javascript:;">活动专题</a>
 									<dl>
-										<dd><a href="#">活动公告</a></dd>
-										<dd><a href="#">剪影展示</a></dd>
+										<dd><a href="reader-activity.html">活动公告</a></dd>
+										<dd><a href="reader-activity-cut.html">剪影展示</a></dd>
 										<dd><a href="#">活动安排</a></dd>
-										<dd><a href="#">活动视频</a></dd>
+										<dd><a href="reader-activity-video.html">活动视频</a></dd>
 									</dl>
 								</li>
 								<li>
-									<a href="#">图书捐赠</a>
+									<a href="javascript:;">少儿天地</a>
+									<dl>
+										<dd><a href="#">通知公告</a></dd>
+										<dd><a href="#">活动信息</a></dd>
+										<dd><a href="reader-children-acts.html">作品展示</a></dd>
+										<dd><a href="reader-children-book.html">童书推荐</a></dd>
+										<dd><a href="#">少儿教育</a></dd>
+									</dl>
 								</li>
 								<li>
-									<a href="#">问卷调查</a>
+									<a href="reader-donate.html">图书捐赠</a>
+								</li>
+								<li>
+									<a href="reader-question.html">问卷调查</a>
 								</li>
 							</ul>
 						</div>
