--- a/南沙图书馆/src/news.html
+++ b/南沙图书馆/src/news.html
@@ -47,9 +47,10 @@
 						<div class="nav">
 							<ul>
 								<li class="active"><a href="news.html">新闻信息</a></li>
-								<li><a href="news-notice.html">通知公告</a></li>
+								<li><a href="#">通知公告</a></li>
 								<li><a href="news-talk.html">南图讲坛</a></li>
 								<li><a href="news-net.html">网上展览</a></li>
+								<li><a href="#">媒体报道</a></li>
 							</ul>
 						</div>
 					</div>
