--- a/南沙图书馆/src/reader-consult.html
+++ b/南沙图书馆/src/reader-consult.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active">
+								<li>
 									<a href="javascript:;">读者须知</a>
 									<dl>
 										<dd><a href="reader.html">办证须知</a></dd>
@@ -58,28 +58,38 @@
 								<li>
 									<a href="javascript:;">图书推荐</a>
 									<dl>
-										<dd><a href="#">新书介绍</a></dd>
+										<dd><a href="reader-book-new.html">新书介绍</a></dd>
 										<dd><a href="#">本地文献推荐</a></dd>
 										<dd><a href="#">主题阅读</a></dd>
 									</dl>
 								</li>
-								<li>
-									<a href="#">读者咨询</a>
+								<li class="active">
+									<a href="reader-consult.html">读者咨询</a>
 								</li>
 								<li>
 									<a href="javascript:;">活动专题</a>
 									<dl>
-										<dd><a href="#">活动公告</a></dd>
-										<dd><a href="#">剪影展示</a></dd>
+										<dd><a href="reader-activity.html">活动公告</a></dd>
+										<dd><a href="reader-activity-cut.html">剪影展示</a></dd>
 										<dd><a href="#">活动安排</a></dd>
-										<dd><a href="#">活动视频</a></dd>
+										<dd><a href="reader-activity-video.html">活动视频</a></dd>
 									</dl>
 								</li>
 								<li>
-									<a href="#">图书捐赠</a>
+									<a href="javascript:;">少儿天地</a>
+									<dl>
+										<dd><a href="#">通知公告</a></dd>
+										<dd><a href="#">活动信息</a></dd>
+										<dd><a href="reader-children-acts.html">作品展示</a></dd>
+										<dd><a href="reader-children-book.html">童书推荐</a></dd>
+										<dd><a href="#">少儿教育</a></dd>
+									</dl>
 								</li>
 								<li>
-									<a href="#">问卷调查</a>
+									<a href="reader-donate.html">图书捐赠</a>
+								</li>
+								<li>
+									<a href="reader-question.html">问卷调查</a>
 								</li>
 							</ul>
 						</div>
@@ -194,16 +204,7 @@
 									<form class="consult-form form mt30">
 										<div class="item-label">
 											<div class="label font-16">
-												咨询类型
-											</div>
-											<div class="control mt5">
-												<label><input type="radio" class="type" name="type"> &nbsp; <span class="mr50">一般咨询</span></label>
-												<label><input type="radio" class="type" name="type" checked> &nbsp; 其他</label>
-											</div>
-										</div>
-										<div class="item-label mt30">
-											<div class="label font-16">
-												标题
+												标题 <span class="required">*</span>
 											</div>
 											<div class="row mt5">
 												<div class="col-md-6">
@@ -213,7 +214,7 @@
 										</div>
 										<div class="item-label mt30">
 											<div class="label font-16">
-												问题描述
+												问题描述 <span class="required">*</span>
 											</div>
 											<div class="control mt5">
 												<textarea rows="5" placeholder="请描述您的问题" class="form-control"></textarea>
@@ -223,7 +224,7 @@
 											<div class="col-md-6">
 												<div class="item-label mt30">
 													<div class="label font-16">
-														您的邮箱
+														您的邮箱 <span class="required">*</span>
 													</div>
 													<div class="mt5">
 														<input type="text" placeholder="请如实填写，否则无法收到答案" class="form-control" />
@@ -233,7 +234,7 @@
 											<div class="col-md-6">
 												<div class="item-label mt30">
 													<div class="label font-16">
-														验证码
+														验证码  <span class="required">*</span>
 													</div>
 													<div class="mt5">
 														<input type="text" placeholder="" class="form-control form-control-code" />
@@ -244,11 +245,20 @@
 										</div>
 										<div class="item-label mt30">
 											<div class="control">
-												<button type="submit" class="btn btn-primary">提交</button>
+												<button id="submit" type="submit" class="btn btn-primary">提交</button>
 											</div>
 										</div>
 									</form>
 								</div>
+								<script>
+									$(document).ready(function(){
+										$('.consult-form').submit(function (event) {
+											event.preventDefault()
+											$.modalTips({content : '您的问题已提交，请等候馆内工作员给您回复，请你注意查收您的邮箱。'})
+										})
+										
+									})
+								</script>
 
 								<!-- 读者留言 -->
 								<div id="tab4" class="panel">
