--- a/南沙图书馆/src/reader-question-show.html
+++ b/南沙图书馆/src/reader-question-show.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="nav">
 							<ul>
-								<li class="active">
+								<li>
 									<a href="javascript:;">读者须知</a>
 									<dl>
 										<dd><a href="reader.html">办证须知</a></dd>
@@ -58,28 +58,38 @@
 								<li>
 									<a href="javascript:;">图书推荐</a>
 									<dl>
-										<dd><a href="#">新书介绍</a></dd>
+										<dd><a href="reader-book-new.html">新书介绍</a></dd>
 										<dd><a href="#">本地文献推荐</a></dd>
 										<dd><a href="#">主题阅读</a></dd>
 									</dl>
 								</li>
 								<li>
-									<a href="#">读者咨询</a>
+									<a href="reader-consult.html">读者咨询</a>
 								</li>
 								<li>
 									<a href="javascript:;">活动专题</a>
 									<dl>
-										<dd><a href="#">活动公告</a></dd>
-										<dd><a href="#">剪影展示</a></dd>
+										<dd><a href="reader-activity.html">活动公告</a></dd>
+										<dd><a href="reader-activity-cut.html">剪影展示</a></dd>
 										<dd><a href="#">活动安排</a></dd>
-										<dd><a href="#">活动视频</a></dd>
+										<dd><a href="reader-activity-video.html">活动视频</a></dd>
 									</dl>
 								</li>
 								<li>
-									<a href="#">图书捐赠</a>
+									<a href="javascript:;">少儿天地</a>
+									<dl>
+										<dd><a href="#">通知公告</a></dd>
+										<dd><a href="#">活动信息</a></dd>
+										<dd><a href="reader-children-acts.html">作品展示</a></dd>
+										<dd><a href="reader-children-book.html">童书推荐</a></dd>
+										<dd><a href="#">少儿教育</a></dd>
+									</dl>
 								</li>
 								<li>
-									<a href="#">问卷调查</a>
+									<a href="reader-donate.html">图书捐赠</a>
+								</li>
+								<li class="active">
+									<a href="reader-question.html">问卷调查</a>
 								</li>
 							</ul>
 						</div>
@@ -112,111 +122,99 @@
 										<div class="t">1、您的性别</div>
 										<div class="text">
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a1">
+													&nbsp; <span class="mr50">男</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a1">
-												&nbsp; <span class="mr50">男</span>
-											</label>
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a1">
+													&nbsp; <span class="mr50">女</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a1">
-												&nbsp; <span class="mr50">女</span>
-											</label>
 										</div>
 									</li>
 									<li>
 										<div class="t">2、您的年龄</div>
 										<div class="text">
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a2">
+													&nbsp; <span class="mr50">15岁以下</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a2">
-												&nbsp; <span class="mr50">15岁以下</span>
-											</label>
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a2">
+													&nbsp; <span class="mr50">16-23岁</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a2">
-												&nbsp; <span class="mr50">16-23岁</span>
-											</label>
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a2">
+													&nbsp; <span class="mr50">24-30岁</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a2">
-												&nbsp; <span class="mr50">24-30岁</span>
-											</label>
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a2">
+													&nbsp; <span class="mr50">31-40岁</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a2">
-												&nbsp; <span class="mr50">31-40岁</span>
-											</label>
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a2">
+													&nbsp; <span class="mr50">41岁以上</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a2">
-												&nbsp; <span class="mr50">41岁以上</span>
-											</label>
 										</div>
 									</li>
 									<li>
 										<div class="t">3、你是否用过阅读类APP软件</div>
 										<div class="text">
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a3">
+													&nbsp; <span class="mr50">是</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a3">
-												&nbsp; <span class="mr50">是</span>
-											</label>
 											<div class="item">
-
+												<label>
+													<input type="radio" class="type" name="a3">
+													&nbsp; <span class="mr50">否</span>
+												</label>
 											</div>
-											<label>
-												<input type="radio" class="type" name="a3">
-												&nbsp; <span class="mr50">否</span>
-											</label>
 										</div>
 									</li>
 									<li>
 										<div class="t">4、常用的阅读app有哪些</div>
 										<div class="text">
 											<div class="item">
-
+												<label>
+													<input type="checkbox" class="type" name="a4">
+													&nbsp; <span class="mr50">QQ阅读</span>
+												</label>
 											</div>
-											<label>
-												<input type="checkbox" class="type" name="a4">
-												&nbsp; <span class="mr50">QQ阅读</span>
-											</label>
 											<div class="item">
-
+												<label>
+													<input type="checkbox" class="type" name="a4">
+													&nbsp; <span class="mr50">书旗阅读</span>
+												</label>
 											</div>
-											<label>
-												<input type="checkbox" class="type" name="a4">
-												&nbsp; <span class="mr50">书旗阅读</span>
-											</label>
 											<div class="item">
-
+												<label>
+													<input type="checkbox" class="type" name="a4">
+													&nbsp; <span class="mr50">和阅读</span>
+												</label>
 											</div>
-											<label>
-												<input type="checkbox" class="type" name="a4">
-												&nbsp; <span class="mr50">和阅读</span>
-											</label>
+											
 											<div class="item">
-
+												<label>
+													<input type="checkbox" class="type" name="a4">
+													&nbsp; <span class="mr50">掌阅iReader</span>
+												</label>
 											</div>
-											<label>
-												<input type="checkbox" class="type" name="a4">
-												&nbsp; <span class="mr50">掌阅iReader</span>
-											</label>
 										</div>
 									</li>
 									<li>
