--- a/南沙图书馆/src/index.html
+++ b/南沙图书馆/src/index.html
@@ -167,9 +167,9 @@
 						<div class="box-title">
 							<i class="icon icon-hot"></i> 主题阅读
 						</div>
-						<div class="text">
+						<div class="text img">
 							<a href="#">
-								<img src="./assets/images/p11.png" alt="" />
+								<img src="./assets/images/p14.png" alt="" />
 								<span class="theme-title">
 									人有知识，则有力矣 - 培根：知识就是力量
 								</span>
@@ -184,32 +184,49 @@
 							<div class="list">
 								<ul>
 									<li>
-										<i class="icon icon-ranking-tag"></i>
-										《宫西达也精选绘本》 
+										<span class="text-info">100</span>
+										<i class="icon icon-ranking-tag">1</i>
+										<a href="#">《宫西达也精选绘本》 </a>
 									</li>
 									<li>
-										<i class="icon icon-ranking-tag"></i>
-										《格雷巴旅馆》
+										<span class="text-info">90</span>
+										<i class="icon icon-ranking-tag">2</i>
+										<a href="#">《格雷巴旅馆》 </a>
 									</li>
 									<li>
-										<i class="icon icon-ranking-tag"></i>
-										《丰子恺万般滋味》
+										<span class="text-info">90</span>
+										<i class="icon icon-ranking-tag">3</i>
+										<a href="#">《一个陌生女人的来信》</a>
 									</li>
 									<li>
+										<span class="text-info">80</span>
 										<i class="icon icon-ranking-tag"></i>
-										《一个陌生女人的来信》
+										<a href="#">《丰子恺万般滋味》</a>
 									</li>
 									<li>
+										<span class="text-info">90</span>
 										<i class="icon icon-ranking-tag"></i>
-										《如何在博弈中获得更多》
+										<a href="#">《一个陌生女人的来信》</a>
 									</li>
 									<li>
+										<span class="text-info">90</span>
 										<i class="icon icon-ranking-tag"></i>
-										《银火箭少年科幻系列》
+										<a href="#">《如何在博弈中获得更多》</a>
 									</li>
 									<li>
+										<span class="text-info">90</span>
 										<i class="icon icon-ranking-tag"></i>
-										《小熊和最好的爸爸》
+										<a href="#">《银火箭少年科幻系列》</a>
+									</li>
+									<li>
+										<span class="text-info">90</span>
+										<i class="icon icon-ranking-tag"></i>
+										<a href="#">《小熊和最好的爸爸》</a>
+									</li>
+									<li>
+										<span class="text-info">90</span>
+										<i class="icon icon-ranking-tag"></i>
+										<a href="#">《如何在博弈中获得更多》</a>
 									</li>
 								</ul>
 							</div>
@@ -221,32 +238,49 @@
 							<div class="list">
 								<ul>
 									<li>
-										<i class="icon icon-ranking-tag"></i>
-										《宫西达也精选绘本》 
+										<span class="text-info">100</span>
+										<i class="icon icon-ranking-tag">1</i>
+										<a href="#">《宫西达也精选绘本》 </a>
 									</li>
 									<li>
-										<i class="icon icon-ranking-tag"></i>
-										《格雷巴旅馆》
+										<span class="text-info">90</span>
+										<i class="icon icon-ranking-tag">2</i>
+										<a href="#">《格雷巴旅馆》 </a>
 									</li>
 									<li>
-										<i class="icon icon-ranking-tag"></i>
-										《丰子恺万般滋味》
+										<span class="text-info">90</span>
+										<i class="icon icon-ranking-tag">3</i>
+										<a href="#">《一个陌生女人的来信》</a>
 									</li>
 									<li>
+										<span class="text-info">80</span>
 										<i class="icon icon-ranking-tag"></i>
-										《一个陌生女人的来信》
+										<a href="#">《丰子恺万般滋味》</a>
 									</li>
 									<li>
+										<span class="text-info">90</span>
 										<i class="icon icon-ranking-tag"></i>
-										《如何在博弈中获得更多》
+										<a href="#">《一个陌生女人的来信》</a>
 									</li>
 									<li>
+										<span class="text-info">90</span>
 										<i class="icon icon-ranking-tag"></i>
-										《银火箭少年科幻系列》
+										<a href="#">《如何在博弈中获得更多》</a>
 									</li>
 									<li>
+										<span class="text-info">90</span>
 										<i class="icon icon-ranking-tag"></i>
-										《小熊和最好的爸爸》
+										<a href="#">《银火箭少年科幻系列》</a>
+									</li>
+									<li>
+										<span class="text-info">90</span>
+										<i class="icon icon-ranking-tag"></i>
+										<a href="#">《小熊和最好的爸爸》</a>
+									</li>
+									<li>
+										<span class="text-info">90</span>
+										<i class="icon icon-ranking-tag"></i>
+										<a href="#">《如何在博弈中获得更多》</a>
 									</li>
 								</ul>
 							</div>
@@ -254,30 +288,30 @@
 					</div>
 					<div class="home-book-new">
 						<div class="book-title">
-							新 书 推 荐
+							新书推荐
 						</div>
 						<div class="list">
-							<ul>
+							<ul class="clearfix">
 								<li> 
-									<a href="#" class="img"><img src="./assets/p4.png" alt=""></a>
-									<a href="#">带着文化游名城</a>
-									<div class="text">
+									<a href="#" class="img"><img src="./assets/images/book.png" alt=""></a>
+									<a href="#" class="t">带着文化游名城</a>
+									<div class="text mt10">
 										作者：刘飞滨 <br />
 										出版社：当代世界出版
 									</div>
 								</li>
 								<li> 
-									<a href="#" class="img"><img src="./assets/p4.png" alt=""></a>
-									<a href="#">带着文化游名城</a>
-									<div class="text">
+									<a href="#" class="img"><img src="./assets/images/book.png" alt=""></a>
+									<a href="#" class="t">带着文化游名城</a>
+									<div class="text mt10">
 										作者：刘飞滨 <br />
 										出版社：当代世界出版
 									</div>
 								</li>
 								<li> 
-									<a href="#" class="img"><img src="./assets/p4.png" alt=""></a>
-									<a href="#">带着文化游名城</a>
-									<div class="text">
+									<a href="#" class="img"><img src="./assets/images/book.png" alt=""></a>
+									<a href="#" class="t">带着文化游名城</a>
+									<div class="text mt10">
 										作者：刘飞滨 <br />
 										出版社：当代世界出版
 									</div>
@@ -285,8 +319,8 @@
 							</ul>
 						</div>
 					</div>
-					<div class="hom-document">
-						<div class="document-title">本地文献推荐</div>
+					<div class="home-document">
+						<div class="document-title font-16 mb10">本地文献推荐</div>
 						<div class="list">
 							<ul>
 								<li><a href="#"><i class="icon icon-block"></i> 库客（KUKE）数字音乐图书馆</a></li>
@@ -301,16 +335,16 @@
 			</div>
 			<div class="full-page-item">
 				<div class="wrap">
-					<div class="home-ele">
+					<div class="home-ele-address">
+						<div class="img pull-right">
+							<img src="./assets/images/img-ele-map.png" alt="" />
+						</div>
 						<div class="distribute">
-							<div class="img">
-								<img src="./assets/img-ele-map.png" alt="" />
-							</div>
 							<div class="t">
 								<a href="#" class="pull-right">查看所有区域</a>
-								电子借阅柜分布
+								<strong>电子借阅柜分布</strong>
 							</div>
-							<div class="list">
+							<div class="mt30 list clearfix">
 								<ul>
 									<li><i>1</i> 南沙区东涌镇和乐一路10号文化中心</li>
 									<li><i>2</i> 南沙区珠江中路29</li>
@@ -326,55 +360,61 @@
 					</div>
 					<div class="home-ele-rows">
 						<div class="md">
-							<div class="item">
-								<span class="pull-right">
-									<strong>35,545</strong> 册
-								</span>
-								<i class="icon icon-borrow"></i>
-								当日借书册数:
-							</div>
-							<div class="item">
-								<span class="pull-right">
-									<strong>35,45</strong> 册
-								</span>
-								<i class="icon icon-back"></i>
-								当日还书册数:
+							<div class="wrap">
+								<div class="item">
+									<span class="pull-right">
+										<strong>35,545</strong> 册
+									</span>
+									<i class="icon icon-borrow"></i>
+									<span class="font-16">当日借书册数：</span>
+								</div>
+								<div class="item">
+									<span class="pull-right">
+										<strong>35,45</strong> 册
+									</span>
+									<i class="icon icon-back"></i>
+									<span class="font-16">当日还书册数：</span>
+								</div>
 							</div>
 						</div>
 						<div class="md">
-							<div class="item">
-								<span class="pull-right">
-									<strong>35,545</strong> 人
-								</span>
-								<i class="icon icon-borrow"></i>
-								当日借书人次:
-							</div>
-							<div class="item">
-								<span class="pull-right">
-									<strong>35,45</strong> 人
-								</span>
-								<i class="icon icon-back"></i>
-								当日还书人次:
+							<div class="wrap">
+								<div class="item">
+									<span class="pull-right">
+										<strong>35,545</strong> 人
+									</span>
+									<i class="icon icon-borrow"></i>
+									<span class="font-16">当日借书人次</span>：
+								</div>
+								<div class="item">
+									<span class="pull-right">
+										<strong>35,45</strong> 人
+									</span>
+									<i class="icon icon-back"></i>
+									<span class="font-16">当日还书人次</span>：
+								</div>
 							</div>
 						</div>
 						<div class="md link">
-							<div class="link-title">
-								友情链接:
-							</div>
-							<div class="list">
-								<ul>
-									<li><a href="#"><i></i> 链接标题</a></li>
-									<li><a href="#"><i></i> 链接标题</a></li>
-									<li><a href="#"><i></i> 链接标题</a></li>
-									<li><a href="#"><i></i> 链接标题</a></li>
-									<li><a href="#"><i></i> 链接标题</a></li>
-									<li><a href="#"><i></i> 链接标题</a></li>
-								</ul>
+							<div class="wrap">
+								<div class="link-title mb5">
+									<strong class="font-18">友情链接:</strong>
+								</div>
+								<div class="list">
+									<ul class="clearfix">
+										<li><a href="#" title="链链接标题链接标题链接标题链接标题接标题"><i></i> 链链接标题链接标题链接标题链接标题接标题</a></li>
+										<li><a href="#"><i></i> 链接标题</a></li>
+										<li><a href="#"><i></i> 链接标题</a></li>
+										<li><a href="#"><i></i> 链接标题</a></li>
+										<li><a href="#"><i></i> 链接标题</a></li>
+										<li><a href="#"><i></i> 链接标题</a></li>
+									</ul>
+								</div>
 							</div>
 						</div>
 					</div>
-					<div class="home-guide">
-						<ul>
+					<div class="home-ele-guide">
+						<ul class="clearfix">
 							<li>
 								<a href="#">
 									<i class="icon icon-ele-guide icon-ele-guide-1"></i> 电子报刊
@@ -422,11 +462,13 @@
 			<div class="full-page-item">
 				<div class="wrap">
 					<div class="home-about">
-						<div class="left">
-							<img src="./assets/home-about.png" alt="" />
+						<div class="left img">
+							<img src="./assets/images/home-about.png" alt="" />
 						</div>
 						<div class="right">
-							<div class="t">关于南沙图书馆</div>
+							<div class="t">
+								<strong class="font-18">关于南沙图书馆</strong>
+							</div>
 							<div class="text">
 								南沙区图书馆位于南沙区丰泽东路，毗邻南沙区文化馆。建筑面积6200平方米、楼高4层，有阅览座位近500座。其中一楼设有广州少年儿童图书馆南沙分馆，阅览座位150余座。目前，馆藏文献资源30多万册（件），各类报刊近700种，涵盖了包括自然科学和社会科学等各学科知识领域,为读者提供馆内阅览和外借服务。为方便读者利用图书馆,每周开放72小时,并设有自习室、阅览室、无障碍设施、残障人士阅览室等，为各类读者群体提供便利服务。 南沙区图书馆是一所综合性的公共图书馆，2010年1月评定为国家一级图书馆。主要为社会各界人士提供文…
 							</div>
@@ -434,7 +476,7 @@
 						</div>
 					</div>
 					<div class="home-about-guide">
-						<ul>
+						<ul class="clearfix">
 							<li>
 								<a href="#">
 									<i class="icon icon-about-guide icon-about-guide-1"></i> 开放时间
